tests/transpiler/x/java/short_circuit.error
exit status 1
Main.java:5: error: incompatible types: boolean cannot be converted to int
        return true;
               ^
Main.java:8: error: bad operand types for binary operator '&&'
        System.out.println((false && boom(1, 2) ? 1 : 0));
                                  ^
  first type:  boolean
  second type: int
Main.java:9: error: bad operand types for binary operator '||'
        System.out.println((true || boom(1, 2) ? 1 : 0));
                                 ^
  first type:  boolean
  second type: int
3 errors
