tests/transpiler/x/java/short_circuit.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 14:23:58 UTC
public class Main {
    static int boom(int a, int b) {
        System.out.println("boom");
        return true;
    }
    public static void main(String[] args) {
        System.out.println((false && boom(1, 2) ? 1 : 0));
        System.out.println((true || boom(1, 2) ? 1 : 0));
    }
}
